# candlepilot

./: .env.example  .gitignore  AGENTS.md  DOCS.md  PLAN.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: backtesting.md  configuration-and-api.md  frontend-settings-and-data.md  market-and-runtime.md  operations.md  providers.md  risk-and-execution.md  storage-and-observability.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: AccountPanel.test.tsx  App.test.tsx  App.tsx  (+7 more)
scripts/: check_commit_messages.py  install_vps.sh  uninstall_vps.sh  web_update_launcher.sh  web_update_worker.sh
tests/: api_fixtures.py  conftest.py  test_acceptance.py  test_analysis_options.py  test_api.py  test_api_backtest.py  test_api_runtime.py  test_auth.py  test_backtest_engine.py  test_backtest_probe.py  test_backtest_regime.py  test_backtest_replay.py  test_backtest_runner.py  test_backtest_snapshots.py  test_binance_public_client.py  test_binance_testnet_broker.py  test_binance_user_stream.py  test_book_collector.py  test_cli.py  test_cli_providers.py  test_codex_auth.py  test_commit_messages.py  test_config.py  test_console_styles.py  test_domain_models.py  test_feature_pipeline.py  test_local_provider.py  test_market_analysis.py  test_market_cache.py  test_market_history.py  test_market_scanner.py  test_market_stream.py  test_observability.py  test_openai_compatible_provider.py  test_paper_executor.py  test_paper_feed.py  test_paper_persistence.py  test_partial_take_profit.py  test_portfolio_backtest.py  test_pricing.py  (+10 more)
(+69 files in other folders)
