[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "candlepilot"
version = "0.1.0"
description = "Local-first, auditable LLM trading system for Binance USD-M perpetuals"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
dependencies = [
  "aiosqlite>=0.20,<1",
  "fastapi>=0.115,<1",
  "greenlet>=3.1,<4",
  "httpx>=0.27,<1",
  "pydantic>=2.10,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
  "websockets>=14,<16",
]

[project.scripts]
candlepilot = "candlepilot.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/candlepilot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
